--- a/frontend/src/routes/gallery/gallery.module.scss
+++ b/frontend/src/routes/gallery/gallery.module.scss
@@ -318,13 +318,13 @@
   width: 100%;
   height: auto;
   display: block;
-  max-height: 70vh;
+  max-height: 50vh;
   object-fit: contain;
 }
 
 .modalVideo {
   width: 100%;
-  max-height: 70vh;
+  max-height: 50vh;
   display: block;
 }
 
@@ -346,6 +346,9 @@
   color: $text-light;
   line-height: 1.5;
   margin: 0;
+  max-height: 200px;
+  overflow-y: auto;
+  padding-right: 0.5rem;
 }
 
 .confidenceScore {
