--- a/frontend/src/styles/_tokens.scss
+++ b/frontend/src/styles/_tokens.scss
@@ -89,6 +89,8 @@ $bg-shell-dot: hsl(0, 0%, 13.5%);
 
 // Home/landing
 $bg-landing: hsl(0, 0%, 10.8%);
+$bg-landing-card: hsl(0, 0%, 4.3%);
+$bg-landing-card-dot: hsl(0, 0%, 7.5%);
 
 // Main content
 $bg-content-base: hsl(0, 0%, 5%);
