--- a/frontend/src/routes/gallery/gallery.module.scss
+++ b/frontend/src/routes/gallery/gallery.module.scss
@@ -775,3 +775,44 @@
   color: $text-lighter;
   text-align: right;
 }
+
+.hevcWarning {
+  width: 100%;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  background: $bg-surface-75;
+  padding: 3rem 2rem;
+  border-radius: $radius-sm;
+}
+
+.hevcIcon {
+  width: 80px;
+  height: 80px;
+  color: $text-lighter;
+}
+
+.hevcText {
+  font-size: $font-size-base;
+  color: $text-light;
+  text-align: center;
+  margin: 0;
+  max-width: 400px;
+}
+
+.hevcSubtext {
+  font-size: $font-size-sm;
+  font-style: italic;
+  color: $text-lighter;
+  margin: 0;
+}
+
+.hevcHint {
+  font-size: $font-size-xs;
+  color: $text-muted;
+  margin: 0;
+  margin-top: 0.5rem;
+}
