--- a/frontend/src/styles/_tokens.scss
+++ b/frontend/src/styles/_tokens.scss
@@ -116,6 +116,7 @@ $border-control: hsl(0, 0%, 22.4%);
 $text-default: hsl(0, 0%, 98%);
 $text-light: hsl(0, 0%, 70.6%);
 $text-lighter: hsl(0, 0%, 53.7%);
+$text-almost-muted: hsl(0, 0%, 40.2%);
 $text-muted: hsl(0, 0%, 30.2%);
 
 $error-default: hsl(0, 72%, 51%);
